adding cursor control for streamlines and other instances where changing what the wand does is important

--- a/VE_Xplorer/XplorerHandlers/Makefile
+++ b/VE_Xplorer/XplorerHandlers/Makefile
@@ -120,7 +120,8 @@ SRCS=\
    cfdTrackball.cxx\
    cfdObjectHandler.cxx\
    CreateVisObjectEventHandler.cxx\
-   ClearVisObjectsEventHandler.cxx
+   ClearVisObjectsEventHandler.cxx\
+   ChangeCursorEventHandler.cxx
 			
 EXTRA_INCLUDES+= -I$(VE_SUITE_HOME)
 EXTRA_LDFLAGS+= -g
