corrected build problems related to new file moves

--- a/VE_Conductor/GUIPlugin/Makefile
+++ b/VE_Conductor/GUIPlugin/Makefile
@@ -81,7 +81,7 @@ DEPDIR= $(CFDHOSTTYPE)_GUIPluginLib
 #BUILD_TYPE=	dbg
 
 EXTRA_INCLUDES+= -I$(VE_SUITE_HOME)
-EXTRA_PATH_FOR_SOURCES+= $(VE_SUITE_HOME)/VE_Conductor/Framework
+#EXTRA_PATH_FOR_SOURCES+= $(VE_SUITE_HOME)/VE_Conductor/Framework
 srcdir= .
 DSO_PLUGIN_DEPS+= -L${VE_SUITE_HOME}/lib/$(CFDHOSTTYPE) -lVE_ConductorLib
 
