updating the XplorerHandlers files to reflect file move changes

--- a/VE_Xplorer/XplorerHandlers/VE_XplorerLib.vcproj
+++ b/VE_Xplorer/XplorerHandlers/VE_XplorerLib.vcproj
@@ -276,10 +276,436 @@
 		<Filter
 			Name="src"
 			Filter=".cpp">
+			<File
+				RelativePath=".\ActiveModelEventHandler.cxx">
+			</File>
+			<File
+				RelativePath=".\AddVTKDataSetEventHandler.cxx">
+			</File>
+			<File
+				RelativePath=".\AttributeEventHandler.cxx">
+			</File>
+			<File
+				RelativePath=".\CADAddAttributeEH.cxx">
+			</File>
+			<File
+				RelativePath=".\CADAddNodeEH.cxx">
+			</File>
+			<File
+				RelativePath=".\CADDeleteNodeEH.cxx">
+			</File>
+			<File
+				RelativePath=".\CADEventHandler.cxx">
+			</File>
+			<File
+				RelativePath=".\CADSetActiveAttributeEH.cxx">
+			</File>
+			<File
+				RelativePath=".\CADSetNameEH.cxx">
+			</File>
+			<File
+				RelativePath=".\CADToggleEH.cxx">
+			</File>
+			<File
+				RelativePath=".\CADTransformEH.cxx">
+			</File>
+			<File
+				RelativePath=".\cfd1DTextInput.cxx">
+			</File>
+			<File
+				RelativePath=".\cfdAnimatedImage.cxx">
+			</File>
+			<File
+				RelativePath=".\cfdAnimatedStreamlineCone.cxx">
+			</File>
+			<File
+				RelativePath=".\cfdCommandArray.cxx">
+			</File>
+			<File
+				RelativePath=".\cfdCommandObjects.cxx">
+			</File>
+			<File
+				RelativePath=".\cfdContour.cxx">
+			</File>
+			<File
+				RelativePath=".\cfdContourBase.cxx">
+			</File>
+			<File
+				RelativePath=".\cfdContours.cxx">
+			</File>
+			<File
+				RelativePath=".\cfdCursor.cxx">
+			</File>
+			<File
+				RelativePath=".\cfdCuttingPlane.cxx">
+			</File>
+			<File
+				RelativePath=".\cfdDataSet.cxx">
+			</File>
+			<File
+				RelativePath=".\cfdDigitalAnalogGauge.cxx">
+			</File>
+			<File
+				RelativePath=".\cfdDisplaySettings.cxx">
+			</File>
+			<File
+				RelativePath=".\cfdEnvironmentHandler.cxx">
+			</File>
+			<File
+				RelativePath=".\cfdFILE.cxx">
+			</File>
+			<File
+				RelativePath=".\cfdFileInfo.cxx">
+			</File>
+			<File
+				RelativePath=".\cfdGeomDataSet.cxx">
+			</File>
+			<File
+				RelativePath=".\cfdGlobalBase.cxx">
+			</File>
+			<File
+				RelativePath=".\cfdGraphicsObject.cxx">
+			</File>
+			<File
+				RelativePath=".\cfdImage.cxx">
+			</File>
+			<File
+				RelativePath=".\cfdIsosurface.cxx">
+			</File>
+			<File
+				RelativePath=".\cfdModel.cxx">
+			</File>
+			<File
+				RelativePath=".\cfdModelHandler.cxx">
+			</File>
+			<File
+				RelativePath=".\cfdMomentum.cxx">
+			</File>
+			<File
+				RelativePath=".\cfdMomentums.cxx">
+			</File>
+			<File
+				RelativePath=".\cfdNavigate.cxx">
+			</File>
+			<File
+				RelativePath=".\cfdObjectHandler.cxx">
+			</File>
+			<File
+				RelativePath=".\cfdObjects.cxx">
+			</File>
+			<File
+				RelativePath=".\cfdPlanes.cxx">
+			</File>
+			<File
+				RelativePath=".\cfdPolyData.cxx">
+			</File>
+			<File
+				RelativePath=".\cfdPresetContour.cxx">
+			</File>
+			<File
+				RelativePath=".\cfdPresetMomentum.cxx">
+			</File>
+			<File
+				RelativePath=".\cfdPresetVector.cxx">
+			</File>
+			<File
+				RelativePath=".\cfdQuatCam.cxx">
+			</File>
+			<File
+				RelativePath=".\cfdQuatCamHandler.cxx">
+			</File>
+			<File
+				RelativePath=".\cfdRawNodeWriteTraverser.cxx">
+			</File>
+			<File
+				RelativePath=".\cfdReadParam.cxx">
+			</File>
+			<File
+				RelativePath=".\cfdScalarBarActor.cxx">
+			</File>
+			<File
+				RelativePath=".\cfdSound.cxx">
+			</File>
+			<File
+				RelativePath=".\cfdSoundHandler.cxx">
+			</File>
+			<File
+				RelativePath=".\cfdSteadyStateVizHandler.cxx">
+			</File>
+			<File
+				RelativePath=".\cfdStreamers.cxx">
+			</File>
+			<File
+				RelativePath=".\cfdTeacher.cxx">
+			</File>
+			<File
+				RelativePath=".\cfdTextOutput.cxx">
+			</File>
+			<File
+				RelativePath=".\cfdTextureBasedVizHandler.cxx">
+			</File>
+			<File
+				RelativePath=".\cfdThread.cxx">
+			</File>
+			<File
+				RelativePath=".\cfdTrackball.cxx">
+			</File>
+			<File
+				RelativePath=".\cfdVector.cxx">
+			</File>
+			<File
+				RelativePath=".\cfdVectorBase.cxx">
+			</File>
+			<File
+				RelativePath=".\cfdVectors.cxx">
+			</File>
+			<File
+				RelativePath=".\cfdWriteTraverser.cxx">
+			</File>
+			<File
+				RelativePath=".\ChangeCursorEventHandler.cxx">
+			</File>
+			<File
+				RelativePath=".\ClearVisObjectsEventHandler.cxx">
+			</File>
+			<File
+				RelativePath=".\CreateVisObjectEventHandler.cxx">
+			</File>
+			<File
+				RelativePath=".\MaterialModeUpdateEH.cxx">
+			</File>
+			<File
+				RelativePath=".\MaterialUpdateEH.cxx">
+			</File>
+			<File
+				RelativePath=".\trackball.cxx">
+			</File>
 		</Filter>
 		<Filter
 			Name="headers"
 			Filter=".h">
+			<File
+				RelativePath=".\ActiveModelEventHandler.h">
+			</File>
+			<File
+				RelativePath=".\AddVTKDataSetEventHandler.h">
+			</File>
+			<File
+				RelativePath=".\AttributeEventHandler.h">
+			</File>
+			<File
+				RelativePath=".\CADAddAttributeEH.h">
+			</File>
+			<File
+				RelativePath=".\CADAddNodeEH.h">
+			</File>
+			<File
+				RelativePath=".\CADDeleteNodeEH.h">
+			</File>
+			<File
+				RelativePath=".\CADEventHandler.h">
+			</File>
+			<File
+				RelativePath=".\CADSetActiveAttributeEH.h">
+			</File>
+			<File
+				RelativePath=".\CADSetNameEH.h">
+			</File>
+			<File
+				RelativePath=".\CADToggleEH.h">
+			</File>
+			<File
+				RelativePath=".\CADTransformEH.h">
+			</File>
+			<File
+				RelativePath=".\cfd1DTextInput.h">
+			</File>
+			<File
+				RelativePath=".\cfdAnimatedImage.h">
+			</File>
+			<File
+				RelativePath=".\cfdAnimatedStreamlineCone.h">
+			</File>
+			<File
+				RelativePath=".\cfdCommandArray.h">
+			</File>
+			<File
+				RelativePath=".\cfdCommandObjects.h">
+			</File>
+			<File
+				RelativePath=".\cfdContour.h">
+			</File>
+			<File
+				RelativePath=".\cfdContourBase.h">
+			</File>
+			<File
+				RelativePath=".\cfdContours.h">
+			</File>
+			<File
+				RelativePath=".\cfdCursor.h">
+			</File>
+			<File
+				RelativePath=".\cfdCuttingPlane.h">
+			</File>
+			<File
+				RelativePath=".\cfdDataSet.h">
+			</File>
+			<File
+				RelativePath=".\cfdDebug.h">
+			</File>
+			<File
+				RelativePath=".\cfdDigitalAnalogGauge.h">
+			</File>
+			<File
+				RelativePath=".\cfdDisplaySettings.h">
+			</File>
+			<File
+				RelativePath=".\cfdEnum.h">
+			</File>
+			<File
+				RelativePath=".\cfdEnvironmentHandler.h">
+			</File>
+			<File
+				RelativePath=".\cfdFILE.h">
+			</File>
+			<File
+				RelativePath=".\cfdFileInfo.h">
+			</File>
+			<File
+				RelativePath=".\cfdGeomDataSet.h">
+			</File>
+			<File
+				RelativePath=".\cfdGlobalBase.h">
+			</File>
+			<File
+				RelativePath=".\cfdGraphicsObject.h">
+			</File>
+			<File
+				RelativePath=".\cfdImage.h">
+			</File>
+			<File
+				RelativePath=".\cfdIsosurface.h">
+			</File>
+			<File
+				RelativePath=".\cfdModel.h">
+			</File>
+			<File
+				RelativePath=".\cfdModelHandler.h">
+			</File>
+			<File
+				RelativePath=".\cfdMomentum.h">
+			</File>
+			<File
+				RelativePath=".\cfdMomentums.h">
+			</File>
+			<File
+				RelativePath=".\cfdNavigate.h">
+			</File>
+			<File
+				RelativePath=".\cfdNotify.h">
+			</File>
+			<File
+				RelativePath=".\cfdObjectHandler.h">
+			</File>
+			<File
+				RelativePath=".\cfdObjects.h">
+			</File>
+			<File
+				RelativePath=".\cfdPlanes.h">
+			</File>
+			<File
+				RelativePath=".\cfdPolyData.h">
+			</File>
+			<File
+				RelativePath=".\cfdPresetContour.h">
+			</File>
+			<File
+				RelativePath=".\cfdPresetMomentum.h">
+			</File>
+			<File
+				RelativePath=".\cfdPresetVector.h">
+			</File>
+			<File
+				RelativePath=".\cfdQuatCam.h">
+			</File>
+			<File
+				RelativePath=".\cfdQuatCamHandler.h">
+			</File>
+			<File
+				RelativePath=".\cfdRawNodeWriteTraverser.h">
+			</File>
+			<File
+				RelativePath=".\cfdReadParam.h">
+			</File>
+			<File
+				RelativePath=".\cfdScalarBarActor.h">
+			</File>
+			<File
+				RelativePath=".\cfdSound.h">
+			</File>
+			<File
+				RelativePath=".\cfdSoundHandler.h">
+			</File>
+			<File
+				RelativePath=".\cfdSteadyStateVizHandler.h">
+			</File>
+			<File
+				RelativePath=".\cfdStreamers.h">
+			</File>
+			<File
+				RelativePath=".\cfdTeacher.h">
+			</File>
+			<File
+				RelativePath=".\cfdTextOutput.h">
+			</File>
+			<File
+				RelativePath=".\cfdTextureBasedVizHandler.h">
+			</File>
+			<File
+				RelativePath=".\cfdThread.h">
+			</File>
+			<File
+				RelativePath=".\cfdTrackball.h">
+			</File>
+			<File
+				RelativePath=".\cfdVector.h">
+			</File>
+			<File
+				RelativePath=".\cfdVectorBase.h">
+			</File>
+			<File
+				RelativePath=".\cfdVectors.h">
+			</File>
+			<File
+				RelativePath=".\cfdWriteTraverser.h">
+			</File>
+			<File
+				RelativePath=".\ChangeCursorEventHandler.h">
+			</File>
+			<File
+				RelativePath=".\ClearVisObjectsEventHandler.h">
+			</File>
+			<File
+				RelativePath=".\CreateVisObjectEventHandler.h">
+			</File>
+			<File
+				RelativePath=".\EventHandler.h">
+			</File>
+			<File
+				RelativePath=".\get_time.h">
+			</File>
+			<File
+				RelativePath=".\MaterialModeUpdateEH.h">
+			</File>
+			<File
+				RelativePath=".\MaterialUpdateEH.h">
+			</File>
+			<File
+				RelativePath=".\trackball.h">
+			</File>
+			<File
+				RelativePath=".\vtkSmartPtr.h">
+			</File>
 		</Filter>
 		<Filter
 			Name="Resource Files"
