polydata gui like you wanted, did not do anything on xplorer side

--- a/VE_Conductor/Framework/Makefile
+++ b/VE_Conductor/Framework/Makefile
@@ -38,6 +38,7 @@ SRCS=\
    streamlines.cpp\
    advancedstreamlines.cpp\
    isosurfaces.cpp\
+   polydata.cpp\
    CORBAServiceList.cxx
 
 # Specify the OS-dependent directory name for object files and depends
