--- a/VE_Builder/Utilities/mk/makeVtkSurface/Makefile
+++ b/VE_Builder/Utilities/mk/makeVtkSurface/Makefile
@@ -11,8 +11,7 @@ srcdir= ../../.
 SRCS=\
    makeVtkSurface.cpp \
    setScalarAndVector.cpp \
-   viewCells.cpp \
-   cfdGrid2Surface.cpp
+   viewCells.cpp
 
 # Specify the OS-dependent directory name for object files and depends
 OBJDIR=../../$(CFDHOSTTYPE)
@@ -30,8 +29,7 @@ EXTRA_CXXFLAGS+=
 
 EXTRA_DEFS+=
 
-EXTRA_INCLUDES+= -I${VE_SUITE_HOME}/VE_Xplorer \
-                 -I$(VE_SUITE_HOME)/VE_Builder/Translator
+EXTRA_INCLUDES+= -I${VE_SUITE_HOME}
 
 EXTRA_LIBS+= -L$(VE_SUITE_HOME)/lib/$(CFDHOSTTYPE)
 EXTRA_LIBS+= -lVE_UtilLib
