--- a/VE_Builder/Utilities/mk/removeVtkCellsOutsideBox/Makefile
+++ b/VE_Builder/Utilities/mk/removeVtkCellsOutsideBox/Makefile
@@ -9,8 +9,7 @@ all:
 srcdir= ../../
 
 SRCS=\
-   cleanVtk.cpp \
-   removeVtkCellsOutsideBox.cpp 
+     removeVtkCellsOutsideBox.cpp 
 
 # Specify the OS-dependent directory name for object files and depends
 OBJDIR=../../$(CFDHOSTTYPE)
@@ -28,8 +27,7 @@ EXTRA_CXXFLAGS+=
 
 EXTRA_DEFS+=
 
-EXTRA_INCLUDES+= -I${VE_SUITE_HOME}/VE_Xplorer \
-                 -I$(VE_SUITE_HOME)/VE_Builder/Translator
+EXTRA_INCLUDES+= -I${VE_SUITE_HOME}
 EXTRA_LIBS+= -L$(VE_SUITE_HOME)/lib/$(CFDHOSTTYPE) 
 EXTRA_LIBS+= -lVE_UtilLib
 
