--- a/VE_Conductor/Framework/WinClient.vcproj
+++ b/VE_Conductor/Framework/WinClient.vcproj
@@ -293,6 +293,12 @@
 				</FileConfiguration>
 			</File>
 			<File
+				RelativePath=".\polydata.cpp">
+			</File>
+			<File
+				RelativePath=".\ScalarToolsDlg.cxx">
+			</File>
+			<File
 				RelativePath=".\SoundsPane.cpp">
 			</File>
 			<File
@@ -363,13 +369,16 @@
 				RelativePath=".\OrbThread.h">
 			</File>
 			<File
-				RelativePath=".\package.h">
-			</File>
-			<File
 				RelativePath=".\paraThread.h">
 			</File>
 			<File
 				RelativePath="PluginLoader.h">
+			</File>
+			<File
+				RelativePath=".\polydata.h">
+			</File>
+			<File
+				RelativePath=".\ScalarToolsDlg.h">
 			</File>
 			<File
 				RelativePath=".\SoundsPane.h">
