added new tbv files to makefiles and corrected a bug with how scalar values are sent back to xplorer.

--- a/VE_Conductor/Framework/Makefile
+++ b/VE_Conductor/Framework/Makefile
@@ -39,7 +39,8 @@ SRCS=\
    advancedstreamlines.cpp\
    isosurfaces.cpp\
    polydata.cpp\
-   CORBAServiceList.cxx
+   CORBAServiceList.cxx\
+   ScalarToolsDlg.cxx
 
 # Specify the OS-dependent directory name for object files and depends
 OBJDIR= $(CFDHOSTTYPE)
