--- a/VE_Installer/Makefile
+++ b/VE_Installer/Makefile
@@ -37,7 +37,9 @@ DIRS= ${VE_SUITE_HOME}/VE_Open/idl \
       ${VE_SUITE_HOME}/VE_CE \
       ${VE_SUITE_HOME}/VE_Conductor \
       ${VE_SUITE_HOME}/VE_Xplorer \
-      ${VE_SUITE_HOME}/VE_Builder/Translator \
+      ${VE_SUITE_HOME}/VE_Builder/Translator/cfdTranslatorToVTK \
+      ${VE_SUITE_HOME}/VE_Builder/Translator/DataLoader \
+      ${VE_SUITE_HOME}/VE_Builder/Translator/DataLoader/TestLoader \
       ${VE_SUITE_HOME}/VE_Builder/Preprocessor \
       ${VE_SUITE_HOME}/VE_Builder/vtkTo3DTexture/tcGUI \
       ${VE_SUITE_HOME}/VE_Builder/Utilities
@@ -56,7 +58,9 @@ ${VE_SUITE_HOME}/VE_CE/Utilities \
 ${VE_SUITE_HOME}/VE_CE \
 ${VE_SUITE_HOME}/VE_Conductor \
 ${VE_SUITE_HOME}/VE_Xplorer \
-${VE_SUITE_HOME}/VE_Builder/Translator \
+${VE_SUITE_HOME}/VE_Builder/Translator/cfdTranslatorToVTK \
+${VE_SUITE_HOME}/VE_Builder/Translator/DataLoader \
+${VE_SUITE_HOME}/VE_Builder/Translator/DataLoader/TestLoader \
 ${VE_SUITE_HOME}/VE_Builder/Preprocessor \
 ${VE_SUITE_HOME}/VE_Builder/vtkTo3DTexture/tcGUI \
 ${VE_SUITE_HOME}/VE_Builder/Utilities::
