--- a/VE_Builder/Translator/DataLoader/DataLoader.vcproj
+++ b/VE_Builder/Translator/DataLoader/DataLoader.vcproj
@@ -133,6 +133,9 @@
 				RelativePath=".\cfdREITranslator.cxx">
 			</File>
 			<File
+				RelativePath=".\converter.cpp">
+			</File>
+			<File
 				RelativePath=".\DataLoader.cxx">
 			</File>
 			<File
@@ -140,6 +143,9 @@
 			</File>
 			<File
 				RelativePath=".\FluentTranslator.cxx">
+			</File>
+			<File
+				RelativePath=".\gridConversion.cxx">
 			</File>
 			<File
 				RelativePath=".\main.cxx">
@@ -168,6 +174,9 @@
 				RelativePath=".\cfdREITranslator.h">
 			</File>
 			<File
+				RelativePath=".\converter.h">
+			</File>
+			<File
 				RelativePath=".\DataLoader.h">
 			</File>
 			<File
@@ -175,6 +184,9 @@
 			</File>
 			<File
 				RelativePath=".\FluentTranslator.h">
+			</File>
+			<File
+				RelativePath=".\gridConversion.h">
 			</File>
 			<File
 				RelativePath=".\MFIXTranslator.h">
