I'm gonna need help w/ this QuatCam stuff. I can't make much sense out of the code. Anyway, it's hacked together right now but there are still some serious issues

--- a/VE_Xplorer/XplorerHandlers/VE_XplorerLib.vcproj
+++ b/VE_Xplorer/XplorerHandlers/VE_XplorerLib.vcproj
@@ -478,6 +478,9 @@
 				RelativePath=".\MaterialUpdateEH.cxx">
 			</File>
 			<File
+				RelativePath=".\QCLoadFileEH.cxx">
+			</File>
+			<File
 				RelativePath=".\TBActivateEH.cxx">
 			</File>
 			<File
@@ -729,6 +732,9 @@
 			</File>
 			<File
 				RelativePath=".\MaterialUpdateEH.h">
+			</File>
+			<File
+				RelativePath=".\QCLoadFileEH.h">
 			</File>
 			<File
 				RelativePath=".\TBActivateEH.h">
